:lipstick: Fix player title alignment issue on gate

--- a/assets/scss/gate/topPlayers.scss
+++ b/assets/scss/gate/topPlayers.scss
@@ -5,7 +5,7 @@
 			                   '. players players players players players players players players .'
 			                   '. . . . timer timer . . . .';
 
-	.title {
+	> .title {
 		align-self: end;
 		grid-area: title;
 	}
